# neat4gym

./: .gitignore  CMakeLists.txt  README.md  compile.sh  install.sh  neat4gym.py  run_gym.sh
gym4neatWrapper/: CMakeLists.txt  Makefile
gym4neatWrapper/include/: Agent.hpp  GymRequests.hpp  GymShell.hpp  HTTPClient.h
gym4neatWrapper/src/: Agent.cpp  GymRequests.cpp  GymShell.cpp  HTTPClient.cpp  main.cpp
neatLib/: CMakeLists.txt
neatLib/include/: Genome.hpp  Link.hpp  NEAT.hpp  Network.hpp  Neuron.hpp  Population.hpp  Settings.hpp  Species.hpp
neatLib/src/: Genome.cpp  Link.cpp  NEAT.cpp  Network.cpp  Neuron.cpp  Population.cpp  Species.cpp
